--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: "/ruby" # apply repo name if use it under gh-pages branch
 
 google_analytics: UA-XXXXX-XX
 repo: http://github.com/inclusa/ruby
-disqus_shortname: "inclusa"
+disqus_shortname: "https-inclusa-github-io-ruby"
 twitter_username: "inclusa"
 comments: true
 
